# pymulakat-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  RAILWAY.md  README.md  SUPABASE_SETUP.md  dependencies.py  main.py  pyproject.toml  question_loader.py  railway.json  railway.toml  requirements.txt  vercel.json
data/: QUESTIONS-v3.csv  QUESTIONS-v3.json  QUESTIONS-v3.py  QUESTIONS-v4.json  QUESTIONS-v4.py  QUESTIONS.py  QUESTIONS_FACTORY.csv  README.md  SEO_CONTENT.py  guide-v4.csv
routers/: achievements.py  admin.py  admin_auth.py  admin_profile.py  admin_setup.py  admin_v2.py  ai_feedback.py  analytics.py  attempts.py  audit.py  auth.py  coach.py  coach_status.py  dashboard.py  debug.py  forms.py  guides.py  questions.py  recommendations.py  tutorials.py
scripts/: add_audit_columns.sql  add_interviews_slug.sql  add_questions_slug.sql  admin_auth_schema.sql  admin_lockout_table.sql  admin_magic_tokens.sql  admin_profile_schema.sql  admin_profile_schema_minimal.sql  ai_question_factory.py  apply_schema_fix.py  backup_db.sh  check_interviews.py  csv_to_json.py  debug_db.py  fix_published.sql  fix_questions_schema.sql  generate_questions.py  generate_sitemap.py  grant_admin.py  migrate_attempts.sql  migrate_curriculum.sql  migrate_forms.sql  migrate_play_count.sql  migrate_questions.py  migrate_questions.sql  migrate_schema.sql  migrate_slug.sql  migrate_to_db.py  migrate_tutorials.py  migrate_users_full.py  question_generator.py  run_slug_migration.py  seed_questions.py  seo_pipeline.py  set_admin_role.sql  slugify_title.sql  test_broken_links.py  (+3 more)
(+14 files in other folders)
